<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingHorizontal="10dp"
        android:paddingVertical="20dp">

        <!--Summary-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/border"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:text="@string/rangkuman_bulan_ini"
                android:textColor="@color/primary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="20dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/rp"
                            android:textColor="@color/green"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_income_amount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/amount"
                            android:textColor="@color/green"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/pemasukan" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/rp"
                            android:textColor="@color/red"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_expense_amount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/amount"
                            android:textColor="@color/red"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/pengeluaran" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <!--Graph-->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginVertical="20dp"
            android:paddingHorizontal="10dp"
            android:src="@drawable/graph" />

        <!--Menu-->
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/btn_add_income"
                        android:layout_width="125dp"
                        android:layout_height="125dp"
                        android:layout_gravity="center"
                        android:background="@color/light"
                        android:padding="15dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/income" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:text="@string/tambah_pemasukan"
                        android:textColor="@color/dark" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/btn_add_expense"
                        android:layout_width="125dp"
                        android:layout_height="125dp"
                        android:layout_gravity="center"
                        android:background="@color/light"
                        android:padding="15dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/expense" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:text="@string/tambah_pengeluaran"
                        android:textColor="@color/dark" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/btn_cash_flow_details"
                        android:layout_width="125dp"
                        android:layout_height="125dp"
                        android:layout_gravity="center"
                        android:background="@color/light"
                        android:padding="10dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/cash_flow" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:text="@string/detail_cash_flow"
                        android:textColor="@color/dark" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/btn_settings"
                        android:layout_width="125dp"
                        android:layout_height="125dp"
                        android:layout_gravity="center"
                        android:background="@color/light"
                        android:padding="15dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/settings" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:text="@string/pengaturan"
                        android:textColor="@color/dark" />
                </LinearLayout>
            </TableRow>
        </TableLayout>


    </LinearLayout>
</ScrollView>